Closed Bug 212400 Opened 22 years ago Closed 22 years ago

MathML is broken in Gfx:GTK (with Freetype2)

Categories

(Core Graveyard :: GFX: Gtk, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jshin1987, Assigned: jshin1987)

References

Details

(Keywords: fixed1.4.1, intl)

Attachments

(1 file)

While working on bug 208213, I found that custom-encoded truetype fonts never got loaded (For a while, I got an impression that it worked for a Korean custom-encoded font because it's loaded as an ordinary truetype font) because of a bug introuduced in last November. A single line fix is coming soon.
Attached patch a one-liner Splinter Review
Attachment #127527 - Flags: superreview?(rbs)
Attachment #127527 - Flags: review?(bstell)
Attachment #127527 - Flags: review?(bstell) → review+
Comment on attachment 127527 [details] [diff] [review] a one-liner sr=rbs
Attachment #127527 - Flags: superreview?(rbs) → superreview+
thanks. patch got checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Summary: MathML is broken in Gfx:GTK (with Freetype2) → MathML is broken in Gfx:GTK (with Freetype2)
Comment on attachment 127527 [details] [diff] [review] a one-liner This is a very simple fix and it affects only Gft:GTK build users with Freetype2 enabled who want to view MathML pages. This bug was introduced last November, but had been overlooked until recently. Nonetheless, fixing it in 1.4.x would be very nice.
Attachment #127527 - Flags: approval1.4.x?
Comment on attachment 127527 [details] [diff] [review] a one-liner a=mkaply for 1.4.1
Attachment #127527 - Flags: approval1.4.x? → approval1.4.x+
Thanks for a1.4. Fix was lnaded in 1.4 branch
Keywords: fixed1.4.1
Blocks: 224532
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: