bug 212400 fix MathML rendering with FT2 enabled (Gfx:Gtk) (r=bstell, sr=rbs)